--- a/amazon.html
+++ b/amazon.html
@@ -55,8 +55,6 @@
       <div class="products-grid js-product-grid"> 
       </div>
     </div>
-    <script src='scripts/cart.js'></script>
-    <script src="data/products.js"></script>
-    <script src="scripts/amazon.js"></script> 
+    <script src="scripts/amazon.js" type='module'></script> 
   </body>
 </html>
